fixed width issue on smaller devices due to cards

--- a/styles/societies.scss
+++ b/styles/societies.scss
@@ -5,7 +5,7 @@
 
   .card {
     background-color: white;
-    margin: 1rem 2rem;
+    margin: 1rem 1rem;
     width: 20rem;
     border-radius: 1rem;
 
